# LaserTag

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
3D-Files/: Instructions  Laser Tag Bop-It All Parts STEP.step  Laser Tag Bop-It All Parts STL.stl  Laser Tag Bop-It All Parts.f3d  LaserTagGrip v2.stl
BopIt/: BopIt.c  BopIt.h
LaserBlaster/: CMakeLists.txt  Doxyfile  sdkconfig  suppressions.xml
LaserBlaster/components/: ADC
LaserBlaster/components/DFPlayerMini/: CMakeLists.txt  DFPlayerMini.cpp  DFPlayerMini_Arduino.cpp  DFPlayerMini_PlayerMini.cpp
LaserBlaster/components/DFPlayerMini/include/: Arduino.h  DFPlayerMini.h  DFPlayerMini_PlayerMini.h
LaserBlaster/main/: ADC.c  Adc.c  BleCentral.c  BopItCommands.c  CMakeLists.txt  EventHandlers.c  Gpio.c  IrEncoder.c  LaserBlaster.c  Rmt.c  idf_component.yml
PCB/: Laser Tag Bop-It.PrjPcb  Laser Tag Bop-It.PrjPcbStructure  LaserTagJoystickBoard.PcbDoc  LaserTagJoystickBoard.SchDoc  LaserTagMainBoard.PcbDoc  LaserTagMainBoard.SchDoc  LaserTagNeopixelBoard.PcbDoc  LaserTagNeopixelBoard.SchDoc  LaserTagTargetBoard.PcbDoc  LaserTagTargetBoard.SchDoc
PCB/Epsilon_BOPIT_15mmX23mm/: Design Rule Check - LaserTagJoystickBoard.drc  LaserTagJoystickBoard.REP  LaserTagJoystickBoard.apr  LaserTagJoystickBoard_Copper_Signal_Bot.gbr  LaserTagJoystickBoard_Copper_Signal_Top.gbr  LaserTagJoystickBoard_Legend_Top.gbr  LaserTagJoystickBoard_NPTH_Drill.gbr  LaserTagJoystickBoard_Paste_Bot.gbr  LaserTagJoystickBoard_Soldermask_Bot.gbr
atmega328_hello_world/: blink.c
tools/: bmp-to-c-bool-array
(+68 files in other folders)
